Partial_14Dec2021/force-app/main/default/objects/District__c/fields/Growth_type__c.field-meta.xml
<CustomField>
    <fullName>Growth_type__c</fullName>
    <description>Growth type</description>
    <label>Growth type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CORE</fullName>
                <default>true</default>
                <label>CORE</label>
            </value>
            <value>
                <fullName>GROWTH</fullName>
            </value>
            <value>
                <fullName>SEED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>